# CuedSpeechRecognition

./: .gitignore  README.md  pyproject.toml
data/: vocab.txt
data/mediapipe_test_coordinates/: ssirt0039_coordinates.csv  ssirt0058_coordinates.csv  ssirt0074_coordinates.csv  ssirt0083_coordinates.csv  ssirt0088_coordinates.csv  ssirt0091_coordinates.csv  ssirt0098_coordinates.csv  ssirt0104_coordinates.csv  ssirt0114_coordinates.csv  ssirt0119_coordinates.csv  ssirt0124_coordinates.csv  ssirt0129_coordinates.csv  ssirt0147_coordinates.csv  ssirt0154_coordinates.csv  ssirt0158_coordinates.csv  ssirt0159_coordinates.csv  ssirt0161_coordinates.csv  ssirt0164_coordinates.csv  ssirt0174_coordinates.csv  ssirt0178_coordinates.csv  ssirt0185_coordinates.csv  ssirt0193_coordinates.csv  ssirt0201_coordinates.csv  ssirt0209_coordinates.csv  ssirt0215_coordinates.csv  ssirt0219_coordinates.csv  ssirt0221_coordinates.csv  ssirt0224_coordinates.csv  ssirt0228_coordinates.csv  ssirt0230_coordinates.csv  ssirt0231_coordinates.csv  ssirt0341_coordinates.csv  ssirt0342_coordinates.csv  ssirt0343_coordinates.csv  ssirt0348_coordinates.csv  ssirt0352_coordinates.csv  ssirt0354_coordinates.csv  ssirt0355_coordinates.csv  ssirt0356_coordinates.csv  ssirt0360_coordinates.csv  (+68 more)
data/mediapipe_train_coordinates/: csf001_coordinates.csv  csf002_coordinates.csv  csf003_coordinates.csv  csf004_coordinates.csv  csf005_coordinates.csv  csf006_coordinates.csv  csf007_coordinates.csv  csf008_coordinates.csv  csf009_coordinates.csv  csf010_coordinates.csv  csf011_coordinates.csv  csf012_coordinates.csv  csf013_coordinates.csv  csf014_coordinates.csv  csf015_coordinates.csv  csf016_coordinates.csv  csf017_coordinates.csv  csf018_coordinates.csv  csf019_coordinates.csv  csf020_coordinates.csv  csf021_coordinates.csv  csf022_coordinates.csv  csf023_coordinates.csv  csf024_coordinates.csv  (+589 more)
src/: decoding.py  job_gpu.sh  sample_validation.py  test.py  train.py
(+3304 files in other folders)
